src/style.css
*
{
    margin: 0;
    padding: 0;
}

html,
body
{
    overflow: hidden;
}

.webgl
{
    position: absolute;
    top: 0;
    left: 0;
    outline: none;
    z-index: 0;
}

.wavelength{
    position: fixed;
    top: 20px;
    left: 20px;
    z-index: 100;
    color: white;
    font-family: Arial, sans-serif;
    font-size: 18px;
}

.play-drone-button{
    z-index: 100;
    position: fixed;
    bottom: 20px;
    left: 20px;
    color: white;
    font-family: Arial, sans-serif;
    font-size: 18px;
}

.play-lead-button{
    z-index: 100;
    position: fixed;
    bottom: 60px;
    left: 40px;
    color: white;
    font-family: Arial, sans-serif;
    font-size: 18px;
}

.play-pad-button{
    z-index: 100;
    position: fixed;
    bottom: 90px;
    left: 40px;
    color: white;
    font-family: Arial, sans-serif;
    font-size: 18px;
}

.drone-gain-range{
    z-index: 100;
    position: fixed;
    bottom: 40px;
    left: 40px;
}

.lead-gain-range{
    z-index: 100;
    position: fixed;
    bottom: 50px;
    left: 40px;
}

.pad-gain-range{
    z-index: 100;
    position: fixed;
    bottom: 60px;
    left: 40px;
}

.freq-range{
    z-index: 100;
    bottom: 90px;
    left: 90px;
    position: fixed;
}

.filter-range{
    z-index: 100;
    bottom: 110px;
    left: 110px;
    position: fixed;
}

.attack-release{
    z-index: 100;
    bottom: 210px;
    left: 10px;
    position: fixed;
}

.drum-machine-controls{
    z-index: 200;
    bottom: 100px;
    left: 10px;
    position: fixed;
    color: white;
}

